--- a/practica-angular/src/app/about/autores/autores.component.css
+++ b/practica-angular/src/app/about/autores/autores.component.css
@@ -6,3 +6,23 @@ figure{
     width: 100%;
     height:100%;
 }
+.left{
+    float: left;
+}
+.right{
+    float: right;
+}
+@media screen and (max-width: 800px){
+ .right{
+     float: left;
+ }
+ .col-7{
+     max-width: 100%;
+     width: 100%;
+ }
+ .col-5{
+     max-width: 100%;
+     width: 100%;
+ }
+
+}
