--- a/practica-angular/src/app/blog/formulario/formulario.component.html
+++ b/practica-angular/src/app/blog/formulario/formulario.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-3">
   <div id="formulario" class="row" novalidate [ngClass]="validado">
     <div class="col">
       <h2>Escribe una nueva entrada</h2>
