--- a/practica-angular/src/app/core/header/header.component.html
+++ b/practica-angular/src/app/core/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="container col">
       <header class="row">
 
-          <a class="col-2 row m-3" href="#"><img src="assets/Logo_Salto_Base.jpg" class="img-fluid" alt="Logo Salto Base"></a>
+          <a class="col-2 row m-3" href="#"><img class="" src="assets/Logo_Salto_Base.jpg"  alt="Logo Salto Base"></a>
          
               <h1  class="col-8  text-center p-5">Salto Base</h1>
         
