--- a/practica-angular/src/app/core/header/header.component.css
+++ b/practica-angular/src/app/core/header/header.component.css
@@ -4,11 +4,14 @@ header{
     background-color: white;
 
 }
- header > a{
+header > a{
     justify-content: center;
     align-content: center;
     flex-direction: column;
- }
+}
+ul{
+    list-style-type: none;
+}
 
 header h1{
     white-space: nowrap;
@@ -24,6 +27,10 @@ header h1{
 .oculto{
     display:none;
 }
+div>div.container{
+    margin-top: 2rem;
+}
+
 @media screen and (max-width: 800px){
     header > button{
        visibility: visible;
@@ -34,13 +41,19 @@ header h1{
        
     }
 }
-@media screen and (max-width: 500px){
-    header > button{
-       visibility: visible;
+@media screen and (min-width: 800px){
+    
+    div>div.container{
+        display: none;
     }
+    
+    header h1{ 
+        font-size: 4rem; 
+    }
+}
+
+@media screen and (max-width: 550px){
     header h1{
-       
         font-size: 2rem;
-       
     }
 }
