--- a/practica-angular/src/app/core/header/header.component.html
+++ b/practica-angular/src/app/core/header/header.component.html
@@ -5,12 +5,12 @@
          
               <h1  class="col-8  text-center p-5">Salto Base</h1>
         
-            <button id="botonMenu" (click)="desplegarMenu()" class="botonMenu mt-5 mb-5 p-1 col-1"><span class ="fa fa-bars"></span></button>
+            <button id="botonMenu" (click)="desplegarMenu(menu)" class="botonMenu mt-5 mb-5 p-1 col-1"><span class ="fa fa-bars"></span></button>
        
       </header>
-      <div id="menu_movil"  (click)="desplegarMenu()"   class="container oculto">
+      <div id="menu_movil" #menu (click)="desplegarMenu(menu)" class="container oculto">
           <nav class="col">
-            <ul class="nav-pills">
+            <ul class="nav-pills justify-content-center">
                 <li class="nav-item "><a class="nav-link" routerLinkActive="active" routerLink="inicio" title="home">Inicio</a></li>
                 <li class="nav-item "><a class="nav-link" routerLinkActive="active" routerLink="centros" title="centros">Centros</a></li>
                 <li class="nav-item "><a class="nav-link" routerLinkActive="active" routerLink="competiciones" title="competiciones">Competiciones</a></li>
