--- a/practica-angular/src/app/core/footer/footer.component.css
+++ b/practica-angular/src/app/core/footer/footer.component.css
@@ -4,14 +4,25 @@ footer {
     font-size: 1rem;
     margin-top: 3%;
     width:100%;
-    display: inline-block;
+   /*  display: inline-block; */
 }
 
 .nombres{
-    display: block;
+    /* display: block; */
     width: 50%;
     float: left;
     text-align: end;
-    padding: 1%;
-    padding-right: 5%
+   
+    /* padding-right: 5% */
+}
+.direccion{
+    /* display: inline-block; */
+}
+.col-1{
+    float:right;
+}
+img{
+    width: 100%;
+    height: 100%;
+    
 }
