--- a/practica-angular/src/app/core/footer/footer.component.html
+++ b/practica-angular/src/app/core/footer/footer.component.html
@@ -1,8 +1,8 @@
-<footer class="bot">
-  <div class="nombres">
+<footer class="bot row col">
+  <div class="nombres col-5">
       <div id="hcard-Diego-Garzon-Molina" class="vcard">
               <span class="fn n">
-                 <span class="given-name">Diego</span>
+              <span class="given-name">Diego</span>
                <span class="additional-name"></span>
                <span class="family-name">Garzon Molina</span>
              </span>
@@ -15,11 +15,14 @@
                  </span>
                  </div>
               </div>
-              <div class="direccion">
+              <div class="direccion col-5">
               <div class="org">Babel</div>
               <div class="adr">
-               <div class="street-address">Av America</div>
-               <span class="locality">Madrid</span>
+               <span class="street-address">Av America</span>
+               <span class="locality">(Madrid)</span>
               </div>
               </div>
+              <div class="col-1">
+              <img class="" src="assets/Babel.png"  alt="Logo Salto Base">
+            </div>
 </footer>
