Mensajes de error en rojo y validado el formulario de blog como about Limpiado de comentarios formulario

--- a/practica-angular/src/styles.css
+++ b/practica-angular/src/styles.css
@@ -28,6 +28,9 @@ html{
     display: flex;
     justify-content: space-around;
 }
+.error-message{
+    color: red;
+}
 
 @media screen and (max-width: 800px){
     article{
