--- a/practica-angular/src/app/about/formulario/formulario.component.html
+++ b/practica-angular/src/app/about/formulario/formulario.component.html
@@ -7,7 +7,7 @@
         <label for="nombre" class="col">Nombre: </label>
         <input class="col" #nameState="ngModel" id ="nombre" type="text" name="nombre" placeholder="Introduce tu nombre" [(ngModel)] = "nombre" required>
         <div [hidden]="nameState.valid || nameState.untouched">
-            <div class="error-message">El nombre debe tener más de dos caracteres.</div>
+            <div class="error-message">El nombre debe tener al menos un caracter.</div>
         </div>
         <label for="email" class="col">Email:</label>
         <input class="col" #emailState="ngModel" id="email" name="email" type="email" placeholder="Introduce tu email" [(ngModel)] = "email" required pattern='^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})'>
