--- a/practica-angular/src/app/blog/formulario/formulario.component.html
+++ b/practica-angular/src/app/blog/formulario/formulario.component.html
@@ -1,16 +1,38 @@
 <div class="container mt-3">
-  <div id="formulario" class="row" novalidate [ngClass]="validado">
+  <div id="formulario" class="row" novalidate [ngClass]="validado" >
     <div class="col">
       <h2>Escribe una nueva entrada</h2>
       <form name="form_entrada" id="form_entrada" method="post" (ngSubmit)="enviar()" #formEntradas="ngForm" class="col"> 
-          <label for="autor" class="col">Autor:</label> <input class="col" id ="autor" type="text" name="autor" placeholder="Introduce tu nombre" required [(ngModel)]="entrada.autor">
-          <label for="email" class="col">Email:</label> <input class="col" id="email" name="email" type="email" placeholder="Introduce tu email" required [(ngModel)]="entrada.email">
-          <label for="tituloEntrada" class="col">Titulo entrada:</label><input class="col" id ="tituloEntrada" type="text" name="tituloEntrada" placeholder="Introduce el titulo" required [(ngModel)]="entrada.titulo">
-          <label for="entrada" class="col">Texto:</label> <textarea #ent id="entrada" name="entrada" placeholder="Escriba los nueva entrada" class="col" [(ngModel)]="entrada.texto" spellcheck="true" (scroll)="autosize(ent)"></textarea>
-          <label for="keywords" class="col">Palabras Clave:</label>  <textarea id="keywords" name="keywords" placeholder="Escriba palabras clave de la entrada" class="col" [(ngModel)]="palabrasClave"></textarea>         
+          <label for="autor" class="col">Autor:</label> 
+          <input class="col" id ="autor" type="text" name="autor" placeholder="Introduce tu nombre" #nameState="ngModel" required [(ngModel)]="entrada.autor">
+          <div [hidden]="nameState.valid || nameState.untouched">
+            <div class="error-message">El autor debe tener al menos un caracter.</div>
+          </div>
+          <label for="email" class="col">Email:</label> 
+          <input class="col" id="email" name="email" type="email" placeholder="Introduce tu email" #emailState="ngModel" required 
+            pattern='^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})' [(ngModel)]="entrada.email">
+          <div [hidden]="emailState.valid || emailState.untouched">
+            <div class="error-message"  [hidden]="!emailState.errors?.required">El email es obligatorio.</div>
+            <div class="error-message" [hidden]="!emailState.errors?.pattern">El email debe tener un formato correcto. </div>
+          </div>
+          <label for="tituloEntrada" class="col">Titulo entrada:</label>
+          <input class="col" id ="tituloEntrada" type="text" name="tituloEntrada" placeholder="Introduce el titulo" #tituloState="ngModel" required [(ngModel)]="entrada.titulo">
+          <div [hidden]="tituloState.valid || tituloState.untouched">
+            <div class="error-message">El titulo debe tener al menos un caracter.</div>
+          </div>
+          <label for="entrada" class="col">Texto:</label>
+          <textarea #ent id="entrada" name="entrada" placeholder="Escriba los nueva entrada" class="col" [(ngModel)]="entrada.texto" spellcheck="true" (scroll)="autosize(ent)" #textoState="ngModel" required></textarea>
+          <div [hidden]="textoState.valid || textoState.untouched">
+            <div class="error-message">El texto debe tener al menos un caracter.</div>
+          </div>
+          <label for="keywords" class="col">Palabras Clave:</label>
+          <textarea id="keywords" name="keywords" placeholder="Escriba palabras clave de la entrada" class="col" [(ngModel)]="palabrasClave" #keywordsState="ngModel" required></textarea>
+          <div [hidden]="keywordsState.valid || keywordsState.untouched">
+            <div class="error-message">Debe de haber al menos una palabra clave.</div>
+          </div>         
           <div class="spaced">    
               <button type="reset" class="btn btn-secondary">Borrar</button>
-              <button id="submit" type="submit" class="btn btn-secondary">Publicar</button>
+              <button id="submit" type="submit" class="btn btn-secondary" [disabled]="formEntradas.invalid">Publicar</button>
           </div>
       </form>
     </div>
