--- a/practica-angular/src/app/core/footer/footer.component.css
+++ b/practica-angular/src/app/core/footer/footer.component.css
@@ -1,9 +1,10 @@
 footer {
-    background-color: #333;
-    color: #fff;
+    background-color:  lightgray;
+    font-weight: bold;
     font-size: 1rem;
     margin-top: 3%;
     width:100%;
+    margin-left: 0%;
    /*  display: inline-block; */
 }
 
@@ -15,14 +16,11 @@ footer {
    
     /* padding-right: 5% */
 }
-.direccion{
-    /* display: inline-block; */
-}
-.col-1{
-    float:right;
+
+figure{
+   
+    float:right; 
 }
 img{
-    width: 100%;
-    height: 100%;
-    
+    max-height: 3.5rem;
 }
