--- a/practica-angular/src/app/core/footer/footer.component.html
+++ b/practica-angular/src/app/core/footer/footer.component.html
@@ -1,5 +1,5 @@
-<footer class="bot row col">
-  <div class="nombres col-5">
+<footer class="bot row">
+  <div class="nombres col-6">
       <div id="hcard-Diego-Garzon-Molina" class="vcard">
           <span class="fn n">
               <span class="given-name">Diego</span>
@@ -15,14 +15,18 @@
         </span>
       </div>
   </div>
-  <div class="direccion">
+  <div class="direccion col-2">
     <div class="org">Babel</div>
       <div class="adr">
-          <div class="street-address">Av America</div>
-          <span class="locality">Madrid</span>
+          <div class="street-address">Av America <span class="locality">(Madrid)</span>
+          </div>
       </div>
+     
+        
     </div>
-    <div class="col-1">
-        <img class="" src="assets/Babel.png"  alt="Logo Salto Base">
-      </div>
+    <div class="col p-0">
+    <figure class="m-0" >
+            <img class="" src="assets/Babel.png"  alt="Logo Salto Base">
+            </figure>
+        </div>    
 </footer>
