--- a/practica-angular/src/app/core/header/header.component.css
+++ b/practica-angular/src/app/core/header/header.component.css
@@ -55,6 +55,10 @@ div>div.container{
     header h1{ 
         font-size: 4rem; 
     }
+    a img{
+        width: 75%;
+        height: 75%;
+     }
 }
 
 @media screen and (max-width: 550px){
@@ -64,6 +68,10 @@ div>div.container{
    .col-8{
      max-width: 50%;
    }
+   a img{
+    width: 75%;
+    height: 50%;
+ }
 }
 @media screen and (max-width: 400px){
     header > button{
@@ -76,7 +84,7 @@ div>div.container{
     }
     a img{
         width: 75%;
-        height: 75%;
+        height: 30%;
      }
 }
 
