--- a/practica-angular/src/app/about/formulario/formulario.component.html
+++ b/practica-angular/src/app/about/formulario/formulario.component.html
@@ -24,7 +24,7 @@
             </div>
         </div>
         <label for="coment" class="col">Envianos tu opinión:</label>
-        <textarea id="coment" name="coment" placeholder="Escriba los comentarios que consideres oportunos" class="col" [(ngModel)] = "opinionDatos"></textarea>
+        <textarea id="coment" name="coment" placeholder="Escribe los comentarios que consideres oportunos" class="col" [(ngModel)] = "opinionDatos"></textarea>
         <label for="checkbox" class="col"><input type="checkbox" name="noticias" id="checkbox" [(ngModel)] = "checkbox">Deseo recibir noticias y oportunidades sobre salto base.</label>         
         <div class="spaced">
             <button type="reset" class="btn btn-secondary">Borrar</button>
