--- a/practica-angular/src/app/blog/entradas/entradas.component.css
+++ b/practica-angular/src/app/blog/entradas/entradas.component.css
@@ -13,7 +13,9 @@ button{
     border-radius: 1rem;
 }
 
-div>span{
+a>span{
+    padding-left: 0%;
+    padding-right: 0%;
     margin-top: auto;
     margin-bottom: auto;
     text-align: center;
